# jobify

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SPEC.md  INSTALLATION.md  WORKFLOW.md  pyproject.toml
api/: .env.example  CLAUDE.md  README.md  alembic.ini  pyproject.toml
api/src/jobify/auth/: tokens.py
api/src/jobify/db/: models.py  session.py
api/src/jobify/dsr/: __init__.py  deleter.py
api/src/jobify/employers/: membership.py
api/src/jobify/eval/: __init__.py  parse_f1.py
api/src/jobify/integrations/embeddings/: gemini.py
api/src/jobify/integrations/notifications/: __init__.py  logging_email.py
api/src/jobify/observability/: logging.py
api/src/jobify/routes/: admin.py  applicants.py  employers.py  feed.py  health.py  me.py  notifications.py  schemas.py
api/src/jobify/scoring/: llm_explainer.py  match.py
api/src/jobify/scripts/: __init__.py  grant_admin.py  seed_consents.py
api/src/jobify/workers/: __init__.py  celery_app.py
api/src/jobify/workers/tasks/: embed.py  score_applicant.py  score_job.py
api/src/jobify_api/: app_factory.py  dependencies.py  main.py  metrics.py  operational_metrics.py  pagination.py  rate_limit.py  settings.py
api/src/jobify_api/admin/: __init__.py  analytics.py
api/src/jobify_api/applications/: service.py
api/src/jobify_api/auth/: dependencies.py  service.py
api/src/jobify_api/dsr/: __init__.py  deleter.py
api/src/jobify_api/employers/: team_service.py
api/src/jobify_api/jobs/: __init__.py  service.py
api/src/jobify_api/middleware/: error_handler.py  metrics.py
api/src/jobify_api/routes/: admin.py  applicants.py  applications.py  applications_schemas.py  auth.py  consents.py  dsr.py  employers.py  feed.py  health.py  invites.py  jobs.py  match_feedback.py  me.py  metrics.py  notifications.py  ready.py  resumes.py  saved_jobs.py  schemas.py
api/src/jobify_api/routes/admin/: __init__.py  _common.py  analytics.py  employers.py  match_feedback.py  users.py
api/src/jobify_api/routes/employers/: __init__.py  core.py  team.py
api/src/jobify_api/routes/jobs/: __init__.py  applicant.py  recruiter.py
api/src/jobify_api/scripts/: __init__.py  grant_admin.py  seed_consents.py  seed_jobs.py
api/src/kpa/: app_factory.py  main.py  settings.py
api/src/kpa/auth/: dependencies.py  google_verifier.py
api/src/kpa/db/: models.py
api/src/kpa/dsr/: __init__.py  deleter.py
api/src/kpa/employers/: membership.py
api/src/kpa/eval/: parse_f1.py
api/src/kpa/integrations/embeddings/: __init__.py  base.py  canonicalize.py  gemini.py
api/src/kpa/middleware/: request_id.py
api/src/kpa/routes/: admin.py  applicants.py  applications.py  consents.py  dsr.py  employers.py  feed.py  health.py  invites.py  jobs.py  me.py  notifications.py  resumes.py  saved_jobs.py  schemas.py
api/src/kpa/scoring/: vector.py
api/src/kpa/scripts/: seed_jobs.py
api/src/kpa/workers/: celery_app.py
api/src/kpa/workers/tasks/: embed.py  parse.py  score_applicant.py  score_job.py  sweep_notifications.py
api/tests/: conftest.py
api/tests/integration/: conftest.py  test_admin_audit_logs.py  test_admin_suspend.py  test_applications_list.py  test_apply.py  test_apply_dispatches_notifications.py  test_audit_logs.py  test_auth_refresh.py  test_consents_routes.py  test_dsr_delete.py  test_dsr_export.py  test_embed_job_worker.py  test_embed_worker.py  test_employer_team.py  test_employers_me.py  test_feed.py  test_grant_admin_cli.py  test_job_detail.py  test_jobs_create_recruiter.py  test_jobs_delete.py  test_jobs_id_applicants.py  test_jobs_me_listing.py  test_jobs_patch.py  test_llm_explainer_wiring.py  test_me.py  test_migrations.py  test_models.py  test_notifications_inbox.py  test_parse_pipeline.py  test_parse_task.py  test_profile_update.py  test_ready.py  test_recruiter_resume_download.py  test_resumes_auth.py  test_resumes_upload.py  test_save_unsave.py  test_score_applicant_worker.py  test_score_job_worker.py  test_seed_jobs_idempotent.py  test_sweep_consent_gate.py  (+2 more)
api/tests/unit/: test_auth_dependencies.py  test_canonicalize.py  test_explain_templated.py  test_explainer.py  test_gemini_provider.py  test_google_verifier.py  test_health.py  test_llm_explainer.py  test_logging.py  test_logging_email_channel.py  test_parser_library.py  test_request_id.py  test_scoring_match.py  test_scoring_structured.py  test_seed_jobs.py  test_session.py  test_settings.py  test_skills_dict.py  test_tokens.py
api/tests/unit/consent/: test_consent_helper_signature.py
api/tests/unit/dsr/: test_builder_signature.py  test_deleter_signature.py
core/: CLAUDE.md  README.md  pyproject.toml
core/data/parse_eval/: 000_README.md
core/emails/: README.md
core/emails/templates/: application_received.html  dsr_export_ready.html  employer_invite.html
core/src/jobify/: __init__.py  app_factory.py  celery_app.py  main.py  outbox.py  settings.py
core/src/jobify/audit/: __init__.py
core/src/jobify/auth/: dependencies.py  service.py
core/src/jobify/consent/: __init__.py
core/src/jobify/db/: models.py  session.py
core/src/jobify/db/migrations/: env.py
core/src/jobify/dsr/: __init__.py
core/src/jobify/integrations/embeddings/: __init__.py  canonicalize.py  (+1 more)
core/src/jobify/middleware/: error_handler.py
core/src/jobify/observability/: logging.py
core/src/jobify/routes/: admin.py  applications.py  auth.py  consents.py  dsr.py  invites.py  jobs.py  resumes.py  saved_jobs.py
core/src/jobify/scoring/: explainer.py  llm_explainer.py
worker/: CLAUDE.md  README.md  pyproject.toml
worker/src/jobify_worker/: async_bridge.py  celery_app.py  runtime.py  settings.py  worker_app.py
worker/src/jobify_worker/scripts/: __init__.py  requeue_outbox.py
worker/src/jobify_worker/tasks/: _scoring_common.py  cleanup_outbox.py  embed.py  embed_job.py  parse.py  score_applicant.py  score_job.py  sweep_notifications.py  sweep_outbox.py
(+702 files in other folders)
