[project]
name = "jobify-api"
version = "0.1.0"
description = "Jobify API service"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jobify-core[aws]",
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "python-multipart>=0.0.12,<0.1",
    "pyjwt[crypto]>=2.10.1,<3",
    "httpx>=0.28.1,<1",
    "redis>=5.2,<6",
]

[project.scripts]
jobify-seed-jobs = "jobify_api.scripts.seed_jobs:main"
jobify-seed-consents = "jobify_api.scripts.seed_consents:main"
jobify-grant-admin = "jobify_api.scripts.grant_admin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobify_api"]

[tool.uv.sources]
jobify-core = { workspace = true }
