[project]
name = "jobify-core"
version = "0.1.0"
description = "Jobify core package"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14,<2",
    "anyio>=4,<5",
    "asyncpg>=0.30,<0.31",
    "celery[redis]>=5.5,<6",
    "fastapi>=0.115,<0.116",
    "google-genai>=1.20,<2",
    "httpx>=0.28.1,<1",
    "pdfminer.six>=20240706,<20270101",
    "pgvector>=0.3.0,<0.4",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "pyjwt[crypto]>=2.10.1,<3",
    "pypdf>=5,<6",
    "python-docx>=1.1,<2",
    "python-multipart>=0.0.12,<0.1",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "structlog>=24.4,<25",
    "uvicorn[standard]>=0.32,<0.33",
]

[project.scripts]
jobify-seed-jobs = "jobify.scripts.seed_jobs:main"
jobify-seed-consents = "jobify.scripts.seed_consents:main"
jobify-grant-admin = "jobify.scripts.grant_admin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobify"]
