[project]
name = "jobify-core"
version = "0.1.0"
description = "Jobify core package"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14,<2",
    "anyio>=4,<5",
    "asyncpg>=0.30,<0.31",
    "celery[redis]>=5.5,<6",
    "google-genai>=1.20,<2",
    "pdfminer.six>=20240706,<20270101",
    "pgvector>=0.3.0,<0.4",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "pypdf>=5,<6",
    "python-docx>=1.1,<2",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "structlog>=24.4,<25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobify"]
