[project]
name = "jobify-core"
version = "0.1.0"
description = "Jobify core package"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14,<2",
    "anyio>=4,<5",
    "asyncpg>=0.30,<0.31",
    "pgvector>=0.3.0,<0.4",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "structlog>=24.4,<25",
]

[project.optional-dependencies]
aws = ["boto3>=1.35,<2"]
ai = ["google-genai>=1.20,<2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobify"]
