[project]
name = "jobify-worker"
version = "0.1.0"
description = "Jobify Celery worker"
requires-python = ">=3.12,<3.13"
dependencies = ["jobify-core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobify_worker"]

[tool.uv.sources]
jobify-core = { workspace = true }
